# roamr

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md
WASM/: .gitignore  12cm_costmap.wasm  README.md  add.c  add.cpp  better.wasm  build_ml_wasm.sh  build_wasm.sh  coordinate_frames.h  faster.wasm  frontier_near_goal_rescan_guard.wasm  frontier_replan_fastpath.wasm  frontier_replan_simpler.wasm  good.wasm  implementation_notes.md  imu.h  lidar_camera.h  lidar_turn_speckle_fix.wasm  lidar_turn_speckle_fix_fastviz.wasm  live_telem.wasm  main.c  main.js  main_fixed.wasm  map.cpp  map.wasm  map_api.h  map_noise_prebinned_currentfilters.wasm  map_noise_step2.wasm  map_noise_step3.wasm  map_noise_zmax_021.wasm  map_noise_zmax_022.wasm  map_noise_zmax_only.wasm  map_occlusion_fix.wasm  min5.wasm  motors.h  path_obstacle_reaction_fix.wasm  pid_low_angle.wasm  planner_clearance_backtrack.wasm  processData.wasm  quiet_logs_ground_cutoff.wasm  (+15 more)
WASM/autonomy/: autonomy.h
WASM/controls/: motors.h  (+2 more)
embedded/ble-test/main/: CMakeLists.txt  foc_dual_motor.cpp
hw/: 12v_to_3v3.kicad_sch  12v_to_5v.kicad_sch  connectors.kicad_sch  fp-lib-table  phone_charging.kicad_sch  roamr.kicad_prl  roamr.kicad_pro  roamr.kicad_sch  sym-lib-table  ~roamr.kicad_sch.lck
iOS/: Build roamr_2025-11-21T17-33-56.txt  README.md  SENSORS.md
tools/: REMOTE_RERUN.md  pyproject.toml  rerun_ws_server.py
wasm-hub/: .firebaserc  .gitignore  README.md  cors.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules
webpage/: index.html
(+322 files in other folders)
